# deployment-gap-model

./: .bandit.yml  .env  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  README.md  SUMMARY.md  book.json  config.env  default.env  docker-compose.yaml  environment.yml  makefile  next_steps.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: docker-image.yml  name: auto-release.yaml  pytest.yml  run-full-build.yml  test-full-build.yml  update-data.yml  update-gitbook-prod-branch.yml
data/: file_paths.yml
data/raw/: 2022.03.22OGW.xlsx  2023.05.24 OGW database.xlsx  2023.05.30 Opposition to Renewable Energy Facilities - FINAL.docx  NREL_Solar_Ordinances.xlsx  NREL_Wind_Ordinances.xlsx  RELDI_local_opposition_2022-03-24.csv  avert_county-fips.txt  avert_emission_rates_04-25-23.xlsx  fossil_infrastructure.xlsx  lbnlisoqueues_2020.xlsx  ncsl_state_permitting_wind.csv  offshore_wind_locations.csv  offshore_wind_projects.csv  padus_intersect_counties.parquet  rmi_energy_communities_counties.parquet  tallgrass_heartland_counties.csv
docker/init_sql/: 00_initialize.sql  01_dbcp_schema.sql  02_roles_and_permissions.sql
docs/: GLOSSARY.md  NREL_ordinance_bans.md  README.md  SUMMARY.md  co2-estimation.md  protected-land-area.md
docs/data-mart/: README.md  br_election_data.md  co2_dashboard.md  counties_all_projects_change_log.md  counties_long_format.md  counties_wide_format.md  county_commission_election_info.md  county_concrete_mw.md  eia860m__generators_operational_status_transition_dates.md  eia860m__latest__generators.md  eia860m__latest__plants.md  eia860m__monthly__generators.md  existing_plants.md  fossil_infrastructure_projects.md  fyi__private__counties__active_clean_projects_capacity.md  fyi_projects_long_format.md  geography_active_projects_change_log.md  iso_counties_all_projects_change_log.md  iso_counties_change_log.md  iso_projects_change_log.md  iso_projects_long_format.md  iso_projects_wide_format.md  iso_regions_all_projects_change_log.md  iso_regions_change_log.md  other_table.md  projects_current_860m.md  projects_current_eia860m.md  projects_history_860m.md  projects_status_codes_860m.md  projects_status_codes_eia860m.md  projects_status_monthly_860m.md  projects_status_monthly_eia860m.md  projects_status_quarterly_860m.md  projects_status_quarterly_eia860m.md  projects_status_transition_dates_860m.md  projects_status_transition_dates_eia860m.md  projects_status_yearly_860m.md  projects_status_yearly_eia860m.md  projects_transition_dates_860m.md  proposed_power_dash_xxx.md
docs/data-warehouse/: README.md  _eia860m__changelog__generators.md  acp__private__changelog__projects.md  acp__private__projects.md  airtable__association__offshore_wind_cable_landing.md  airtable__manual_ordinances.md  airtable__offshore_wind_cable_landing_association.md  airtable__offshore_wind_locations.md  airtable__offshore_wind_port_association.md  airtable__offshore_wind_projects.md  airtable__offshore_wind_staging_association.md  census__county_fips.md  census__state_fips.md  columbia_reldi_local_opposition__local_ordinance.md  columbia_reldi_local_opposition__state_policy.md  eia860m__annual__generators.md  eia860m__operational_status_codes.md  eip_facilities.md  fyi__private__locations.md  fyi__private__projects.md  fyi__private__resource_capacity.md  madrone__data_last_updated.md  ncsl__state_permitting.md
docs/sources/: README.md
documentation/: GLOSSARY.md  SUMMARY.md
documentation/Data Mart/: county_long_format.md  other_table.md
documentation/data-mart/: README.md
documentation/database-documentation/: README.md
notebooks/: 00-tpb-explore_ISO_queue_transforms.ipynb  01-tpb-play_with_fips.ipynb  02-kl-deduplicate_active_iso_queue.ipynb  02.1-kl-deduplicate-active-iso-queue.ipynb  03-kl-identifying_hotspot_counties.ipynb  04-kl-iso_utility_join.ipynb  05-kl-iso_co2_emissions.ipynb  06-tpb-draft_project_data_mart.ipynb  07-tpb-draft_county_data_mart.ipynb  08-tpb-clean_EIP_facilities.ipynb  08-tpb-draft_EIP_transforms.ipynb  09-tpb-clean_EIP_projects.ipynb  10-tpb-clean_EIP_air_constr.ipynb  11-tpb-compare_fuel_data_sources.ipynb  12-tpb-revisit_co2_estimates.ipynb  13-tpb-assess_LBNL_2021_data_consistency.ipynb  14-tpb-explore_bin_sizing_county_data_mart.ipynb  15-tpb-explore_NREL_ordinances.ipynb  16-tpb-NREL_development.ipynb  17-tpb-justice40_EDA_QA.ipynb  18-tpb-VCE_vs_RFF_energy_communities.ipynb  19-tpb-explore_offshore_wind.ipynb  20-tpb-NREL_ordinance_metrics.ipynb  21-tpb-de_facto_bans_NREL.ipynb  22-eb-protected_areas_map.ipynb  23-tpb-check_federal_lands.ipynb  24-tpb-federal_land_data_mart.ipynb  25-tpb-check_energy_communities.ipynb  26-tpb-census_munging.ipynb  27-tpb-brownfield_validation.ipynb  28-tpb-ec_coal_qual_area_fraction.ipynb  29-tpb-assess_LBNL_2022_data_consistency.ipynb  30-tpb-explore_service_territories.ipynb  30-tpb-update_reldi_ordinances.ipynb  31-bdn-justic40-update-analysis.ipynb  32-bdn-ballot-ready.ipynb  33-bdn-ballot-ready-normalization.ipynb  34-bdn-comissioner-table.ipynb  35-bdn-duplicate-raw-ballot-ready.ipynb  36-tpb-ballot-ready-normalization.ipynb  (+39 more)
notebooks/compare_branches/: README.md  compare_refactor-eia860m-data.ipynb
notebooks/data_updates/: Untitled.ipynb
notebooks/full-lbnl-gs-comparison/: compare_raw_data.ipynb  raw_isone.xlsx  raw_pjm.xlsx
notebooks/gridstatus_comparisons/: iso_projects_long_format_gs_jan_24.parquet  iso_projects_long_format_gs_oldest_archives.parquet  iso_projects_long_format_lbnl.parquet  lbnl-to-oldest-gs.ipynb  lbnl-to-recent-gs.ipynb
references/: illinois_siting_law.md
reports/: gridstatus_data_dict.md  gs_script.py  iso_queues_december17.parquet  iso_queues_december4.parquet  iso_queues_ex_spp_isone_july9.parquet
scripts/: branch_compare_helper.py
sql/docker_init_sql/: 00_initialize.sql  01_schema1.sql
src/dbcp/: __init__.py  cli.py  constants.py  etl.py  helpers.py  models.py  publish.py  save_settings.py  schemas.py  settings.yaml
src/scripts/: __init__.py  (+1 more)
test/: __init__.py
(+168 files in other folders)
