[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deployment-gap-model"
version = "0.1.0"
description = "Data engineering for the Down Ballot Climate Project (DBCP)"
authors = [{ name = "Catalyst Cooperative", email = "hello@catalyst.coop" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
dependencies = [
  "addfips>=0.4",
  "beautifulsoup4~=4.14",
  "click>=8.1.7",
  "coloredlogs~=15.0.1",
  "duckdb>=1.3.0",
  "fiona~=1.10.1",
  "gcsfs~=2026.1.0",
  "geocodio-library-python>=0.7.0",
  "geopandas~=1.0.1",
  "google-cloud-storage~=3.8.0",
  "googlemaps~=4.10.0",
  "gridstatus~=0.29.1",
  "joblib~=1.2.0",
  "jupyterlab~=4.5.5",
  "matplotlib~=3.10.8",
  "numpy<3",
  "pandas~=2.3.3",
  "pandas-gbq~=0.35.0",
  "pandera[io]~=0.26.1",
  "plotly~=5.15.0",
  "psycopg2-binary~=2.9.11",
  "pyairtable>=2.3.3",
  "pydantic>=2.9,<2.13",
  "pydata-google-auth~=1.9.1",
  "pytest~=9.0.2",
  "python-docx~=1.2.0",
  "ruff>=0.14",
  "s3fs>=2022.11.0",
  "scipy~=1.17.1",
  "sqlalchemy<3.0",
  "tqdm>=4.64.1,<5.0.0",
  "us~=3.2.0",
]

[project.scripts]
branch-compare = "scripts.branch_compare_helper:main"

[project.urls]
Homepage = "https://github.com/catalyst-cooperative/down_ballot_climate"

[tool.hatch.build.targets.wheel]
packages = ["src/dbcp", "src/scripts"]

[tool.ruff]
# Configurations that apply to both the `format` and `lint` subcommands.
target-version = "py313"
line-length = 88
indent-width = 4
# Don't touch autogenerated alembic migrations and ignore notebooks for now
exclude = ["migrations/versions", "*.ipynb"]

[tool.ruff.format]
# Configuration specfic to the `format` subcommand.
# We use black compatible formatting.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Configurations that apply to the `lint` subcommand.
preview = true # Required for NPY201
explicit-preview-rules = true # and ONLY NPY201
select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C",   # Limit cyclomatic complexity using mccabe
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle errors
  "E",   # pycodestyle errors
  "EXE", # executable file issues
  "F",   # pyflakes
  "I",   # isort
  "ICN", # flake8 import conventions
  "N",   # pep8-naming
  "NPY", # NumPy specific checks
  "PD",  # pandas checks
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie miscellaneous linting
  "PTH", # use pathlib
  "Q",   # flake8-quotes
  "RET", # check return values
  "RSE", # unnecessary parenthises on raised exceptions
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  "UP",  # pyupgrade (use modern python syntax)
  "W",   # pycodestyle warnings
  # These rules would be good, but will require more effort:
  # "ANN", # identify missing type annotations
  # "ARG", # find unused arguments
  # "DTZ", # datetime / timzeone issues flake8-datetimez
  # "ERA", # eradicate: finds commented out code
  # "FURB", # refurb: general code quality/modernization. Still in preview.
  # "PERF", # performance issues
  # "PT", # pytest style
  # "PL", # PyLint (lots of rules)
  # "RUF", # Ruff specific rules
  # "T", # Find print statements that should probably be logging
]
ignore = [
  "B006",   # Don't use mutable data structures for argument defaults. TODO: FIX
  "B008",   # Don't perform function calls in argument defaults. TODO: FIX
  "D401",   # Require imperative mood in docstrings.
  "D417",
  "E501",   # Overlong lines.
  "E203",   # Space before ':' (black recommends to ignore)
  "E226",   # Missing whitespace around arithmetic operator
  "E266",   # Too many leading `#` before block comment
  "PD003",  # Use of isna rather than isnull
  "PD004",  # Use of notna rather than notnull
  "PD010",  # Use of df.stack()
  "PD013",  # Use of df.unstack()
  "PD015",  # Use of pd.merge() rather than df.merge()
  "RET504", # Ignore unnecessary assignment before return
  "RUF005", # Unpack iterables instead of concatenation
  "S101",   # Use of assert
]
extend-select = ["NPY201"] # preview rule to easy migration to Numpy 2.0

[dependency-groups]
dev = ["pre-commit>=4.6.0"]
