[metadata]
name = dbcp
version = 0.0.1
author = Bennett Norman
author_email = bennett.norman@catalyst.coop
description = Open data processing pipline for energy, environment and election data. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/catalyst-cooperative/down_ballot_climate
project_urls =
    Bug Tracker = https://github.com/catalyst-cooperative/down_ballot_climate/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src